@@ -41,7 +41,7 @@
      <!-- Until someone tells me how to learn the user locale in 
           backends, the shortname must be monolingual in <en>! -->
     </ev_shortname>
-    <ev_driverval>Dpi=300 Ritech=Off TonerSave=On</ev_driverval>
+    <ev_driverval>Dpi=300x300dpi Ritech=Off TonerSave=On</ev_driverval>
    </enum_val>
    <enum_val id="ev/epsonepl-PrintoutMode-Normal">
     <ev_longname>
@@ -54,7 +54,7 @@
      <!-- Until someone tells me how to learn the user locale in 
           backends, the shortname must be monolingual in <en>! -->
     </ev_shortname>
-    <ev_driverval>Dpi=600 Ritech=On TonerSave=Off</ev_driverval>
+    <ev_driverval>Dpi=600x600dpi Ritech=On TonerSave=Off</ev_driverval>
    </enum_val>
    <enum_val id="ev/epsonepl-PrintoutMode-High">
     <ev_longname>
@@ -67,7 +67,7 @@
      <!-- Until someone tells me how to learn the user locale in 
           backends, the shortname must be monolingual in <en>! -->
     </ev_shortname>
-    <ev_driverval>Dpi=Class1200 Ritech=On TonerSave=Off</ev_driverval>
+    <ev_driverval>Dpi=1200x600dpi Ritech=On TonerSave=Off</ev_driverval>
    </enum_val>
   </enum_vals>
 </option>
