@@ -1,3 +1,7 @@
+2003-03-07  Till Kamppeter <till.kamppeter@gmx.net>
+
+	* opt/epsonepl-PrintoutMode.xml: Corrected resolutions.
+
 2003-03-06  Till Kamppeter <till.kamppeter@gmx.net>
 
 	* printer/Minolta-magicolor_2300_DL.xml: Added the Minolta/QMS
